Added features #5 and #6

--- a/GnuPlusLinux/Views/Shared/_Layout.cshtml
+++ b/GnuPlusLinux/Views/Shared/_Layout.cshtml
@@ -26,26 +26,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GnuPlusLinux</a>
+                <a asp-area="" asp-controller="Gnu" asp-action="Index" class="navbar-brand">GnuPlusLinux</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse navbar-left">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Gnu" asp-action="Application">Apply</a></li>
+                    <li><a asp-area="" asp-controller="Gnu" asp-action="Forums">Forums</a></li>
+                    <li><a asp-area="" asp-controller="Gnu" asp-action="Members">Members</a></li>
+                    <li><a asp-area="" asp-controller="Gnu" asp-action="Calendar">Calendar</a></li>
+                </ul>
+            </div>
+            <div class="navbar-collapse collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Gnu" asp-action="Login">Login</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2018 - GnuPlusLinux</p>
-        </footer>
     </div>
 
     <environment include="Development">
@@ -71,4 +75,9 @@
 
     @RenderSection("Scripts", required: false)
 </body>
+
+
+
+
+
 </html>
