Split off forums view and methods to separate controller

--- a/GnuPlusLinux/Views/Shared/_Layout.cshtml
+++ b/GnuPlusLinux/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse navbar-left">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Gnu" asp-action="Application">Apply</a></li>
-                    <li><a asp-area="" asp-controller="Gnu" asp-action="Forums">Forums</a></li>
+                    <li><a asp-area="" asp-controller="Forums" asp-action="Index">Forums</a></li>
                     <li><a asp-area="" asp-controller="Gnu" asp-action="Members">Members</a></li>
                     <li><a asp-area="" asp-controller="Gnu" asp-action="Calendar">Calendar</a></li>
                 </ul>
