--- a/GnuPlusLinux/Views/Forums/Index.cshtml
+++ b/GnuPlusLinux/Views/Forums/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewData["Title"] = "Forums";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Forums</h2>
-
+<h2>@ViewBag.Title</h2>
+<h4>@ViewBag.Message</h4>
