--- a/GnuPlusLinux/Views/Shared/_Layout.cshtml
+++ b/GnuPlusLinux/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
             <div class="navbar-collapse collapse navbar-right">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Gnu" asp-action="Login">Login</a></li>
+                    <li><a asp-area="" asp-controller="Member" asp-action="Register">Register</a></li>
                 </ul>
             </div>
         </div>
