--- a/GnuPlusLinux/wwwroot/css/Login.css
+++ b/GnuPlusLinux/wwwroot/css/Login.css
@@ -1,134 +1,4 @@
-﻿/* reset */
-* {
-    margin: 0;
-    padding: 0;
-}
-
-#wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-label {
-    cursor: pointer;
-}
-
-    label:focus {
-        outline: none;
-    }
-
-.menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #fff;
-    width: 240px;
-    height: 100%;
-    transform: translate3d(-240px, 0, 0);
-    transition: transform 0.35s;
-}
-
-    .menu label.menu-toggle {
-        position: absolute;
-        right: -60px;
-        width: 60px;
-        height: 60px;
-        line-height: 0px;
-        display: block;
-        padding: 0;
-        text-indent: -9999px;
-        background: #fff url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/25px 25px no-repeat;
-    }
-
-    .menu ul li > label {
-        background: url(https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-right-b-128.png) 95% 50%/16px 16px no-repeat;
-    }
-
-    .menu ul li a, .menu ul li label {
-        display: block;
-        text-align: center;
-        padding: 0 20px;
-        line-height: 60px;
-        text-decoration: none;
-        color: #000;
-    }
-
-        .menu ul li a:hover, .menu ul li label:hover {
-            color: #666;
-        }
-
-/* hide inputs */
-.menu-checkbox {
-    display: none;
-}
-
-/* hide navigation icon for sublabels */
-.menu .menu label.menu-toggle {
-    background: none;
-}
-
-/* fade in checked menu */
-.menu-checkbox:checked + .menu {
-    transform: translate3d(0, 0, 0);
-}
-
-/* for show */
-html, body {
-    height: 100%;
-    background-color: white;
-}
-
-p {
-    margin-bottom: 15px;
-}
-
-#info {
-    display: table;
-    background: rgba(0, 0, 0, 0.2);
-    height: 100%;
-    width: 100%;
-    margin-left: auto;
-    vertical-align: middle;
-    text-align: left;
-    padding-left: 125px;
-    padding-right: 125px;
-}
-
-    #info #info-content {
-        display: table-cell;
-        vertical-align: middle;
-        text-align: left;
-        text-transform: uppercase;
-        color: #000000;
-        font-size: 12px;
-    }
-
-    #info #info-content h1 {
-        color: #fff;
-        border: 3px solid #fff;
-        text-align: left;
-        background: rgba(0, 0, 0, 0.3);
-        font-size: 22px;
-        font-weight: normal;
-        padding: 20px;
-        margin: 10px;
-        display: inline-block;
-    }
-
-    #info #info-content h1 strong {
-        display: block;
-        font-size: 26px;
-    }
-
-body {
-    background-color: #1F77ED;
-    font-family: 'Roboto', sans-serif;
-    background: url('../images/HeroImage/HeroPoint.jpg') 50% 50%/cover;
-}
-
-.container {
+﻿.container {
     margin-top: 3rem;
 }
 
@@ -161,7 +31,7 @@ input {
 }
 
 .forgot-pass {
-    text-decosration: none;
+    text-decoration: none;
     color: #878787;
     Font-weight: 700;
 }
