--- a/GnuPlusLinux/wwwroot/css/site.css
+++ b/GnuPlusLinux/wwwroot/css/site.css
@@ -1,13 +1,35 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
-for details on configuring this project to bundle and minify static web assets. */
+﻿/****************************
+ **** General and Resets ****
+ ****************************/
 
-html,body {
-    width: 100%;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    background: url('../images/HeroImage/HeroPoint.jpg') 50% 50%/cover;
+    font-family: sans-serif;
     height: 100%;
     margin: 0px;
-    padding: 0px;
     overflow-x: hidden;
-    font-family: sans-serif;
+    padding: 0px;
+    width: 100%;
+}
+
+p {
+    margin-bottom: 15px;
+}
+
+
+/*************************
+ **** Site Background ****
+ *************************/
+
+#site-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .hero {
@@ -18,37 +40,33 @@ html,body {
     align-items: center;
     text-align: center;
     color: white;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5), url('../images/HeroImage/HeroPoint.jpg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
-.hero h1{
-    font-size: 5em;
+    .hero h1 {
+        font-size: 5em;
+        margin-top: 0;
+        margin-bottom: 0.5em;
+    }
 
-    margin-top: 0;
-    margin-bottom: 0.5em;
-}
 
-.hero .btn {
-    display: block;
-    width: 200px;
-
-    padding: 1em;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-
-    color: white;
-    text-decoration: none;
-    font-size: 1.5em;
-
-    border: 3px solid white;
-    border-radius: 20px;
-    background-color: rgba(147, 112, 219, 0.8)
-}
+    .hero .btn {
+        display: block;
+        width: 200px;
+        padding: 1em;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        color: white;
+        text-decoration: none;
+        font-size: 1.5em;
+        border: 3px solid white;
+        border-radius: 20px;
+        background-color: rgba(147, 112, 219, 0.8)
+    }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
@@ -57,68 +75,13 @@ html,body {
     padding-right: 20px;
 }
 
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
+/************************
+ **** Nav / Menu Bar ****
+ ************************/
 
-
-/* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-}
-
-    /* Style the buttons that are used to open the tab content */
-    .tab button {
-        background-color: inherit;
-        float: left;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        padding: 14px 16px;
-        transition: 0.3s;
-    }
-
-        /* Change background color of buttons on hover */
-        .tab button:hover {
-            background-color: #ddd;
-        }
-
-        /* Create an active/current tablink class */
-        .tab button.active {
-            background-color: #ccc;
-        }
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
-
-/* NAV BAR STARTS HERE */
-* {
-    margin: 0;
-    padding: 0;
-}
-
-#wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-label {
+label.menu-toggle {
     cursor: pointer;
 }
-
-    label:focus {
-        outline: none;
-    }
 
 .menu {
     position: absolute;
@@ -131,34 +94,34 @@ label {
     transition: transform 0.35s;
 }
 
-.menu label.menu-toggle {
-    position: absolute;
-    right: -60px;
-    width: 60px;
-    height: 60px;
-    line-height: 0px;
-    display: block;
-    padding: 0;
-    text-indent: -9999px;
-    background: #fff url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/25px 25px no-repeat;
-}
+    .menu label.menu-toggle {
+        position: absolute;
+        right: -60px;
+        width: 60px;
+        height: 60px;
+        line-height: 0px;
+        display: block;
+        padding: 0;
+        text-indent: -9999px;
+        background: #fff url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/25px 25px no-repeat;
+    }
 
-.menu ul li > label {
-    background: url(https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-right-b-128.png) 95% 50%/16px 16px no-repeat;
-}
+    .menu ul li > label {
+        background: url(https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-right-b-128.png) 95% 50%/16px 16px no-repeat;
+    }
 
-.menu ul li a, .menu ul li label {
-    display: block;
-    text-align: center;
-    padding: 0 20px;
-    line-height: 60px;
-    text-decoration: none;
-    color: #000;
-}
+    .menu ul li a, .menu ul li label {
+        display: block;
+        text-align: center;
+        padding: 0 20px;
+        line-height: 60px;
+        text-decoration: none;
+        color: #000;
+    }
 
-.menu ul li a:hover, .menu ul li label:hover {
-    color: #666;
-}
+        .menu ul li a:hover, .menu ul li label:hover {
+            color: #666;
+        }
 
 /* hide inputs */
 .menu-checkbox {
@@ -175,64 +138,43 @@ label {
     transform: translate3d(0, 0, 0);
 }
 
-body {
-    background: url('../images/HeroImage/HeroPoint.jpg') 50% 50%/cover;
-}
-
-p {
-    margin-bottom: 15px;
-}
+/******************
+ **** Info Box ****
+ ******************/
 
 #info {
     display: table;
-    background: rgba(0, 0, 0, 0.2);
     height: 100%;
     width: 100%;
+    margin-left: auto;
+    vertical-align: middle;
+    text-align: left;
+    padding-left: 125px;
+    padding-right: 125px;
 }
 
-#info #info-content {
-display: table-cell;
-vertical-align: middle;
-text-align: center;
-text-transform: uppercase;
-color: #fff;
-font-size: 12px;
-}
-
-#info #info-content h1 {
-    color: #fff;
-    border: 3px solid #fff;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.1);
-    font-size: 22px;
-    font-weight: normal;
-    padding: 20px;
-    margin: 10px;
-    display: inline-block;
-}
-
-    #info #info-content h1 strong {
-        display: block;
-        font-size: 26px;
+    #info #info-content {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: left;
+        text-transform: uppercase;
+        color: #000000;
+        font-size: 12px;
     }
 
-.hero h1 {
-    font-size: 5em;
-    margin-top: 0;
-    margin-bottom: 0.5em;
-}
+        #info #info-content h1 {
+            color: #fff;
+            border: 3px solid #fff;
+            text-align: left;
+            background: rgba(0, 0, 0, 0.3);
+            font-size: 22px;
+            font-weight: normal;
+            padding: 20px;
+            margin: 10px;
+            display: inline-block;
+        }
 
-.hero .btn {
-    display: block;
-    width: 200px;
-    padding: 1em;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
-    text-decoration: none;
-    font-size: 1.5em;
-    border: 3px solid white;
-    border-radius: 20px;
-    background-color: rgba(147, 112, 219, 0.8)
-}
+            #info #info-content h1 strong {
+                display: block;
+                font-size: 26px;
+            }
