--- a/GnuPlusLinux/Views/Shared/_Layout.cshtml
+++ b/GnuPlusLinux/Views/Shared/_Layout.cshtml
@@ -18,7 +18,29 @@
 </head>
 
 <body>
-    @RenderBody()
+	@*Menu*@
+    <input type="checkbox" id="menu" name="menu" class="menu-checkbox">
+    <nav class="menu">
+        <label class="menu-toggle" for="menu"><span>Toggle</span></label>
+        <ul>
+            <li>
+                <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Home" asp-action="Information">Information</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Home" asp-action="Registration">Registration</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div id="site-wrapper">
+        @RenderBody()
+    </div>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
