--- a/GnuPlusLinux/wwwroot/css/site.css
+++ b/GnuPlusLinux/wwwroot/css/site.css
@@ -27,45 +27,44 @@ p {
  *************************/
 
 #site-wrapper {
-    width: 100%;
     height: 100%;
-    overflow: hidden;
+    width: 100%;
 }
 
 .hero {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    color: white;
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: cover;
+    color: white;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    text-align: center;
+    width: 100vw;
 }
 
     .hero h1 {
         font-size: 5em;
-        margin-top: 0;
         margin-bottom: 0.5em;
+        margin-top: 0;
     }
 
 
     .hero .btn {
+        background-color: rgba(147, 112, 219, 0.8);
+        border: 3px solid white;
+        border-radius: 20px;
+        color: white;
         display: block;
-        width: 200px;
-        padding: 1em;
+        font-size: 1.5em;
         margin-top: 50px;
         margin-left: auto;
         margin-right: auto;
-        color: white;
+        padding: 1em;
         text-decoration: none;
-        font-size: 1.5em;
-        border: 3px solid white;
-        border-radius: 20px;
-        background-color: rgba(147, 112, 219, 0.8)
+        width: 200px;
     }
 
 /* Wrapping element */
@@ -84,26 +83,26 @@ label.menu-toggle {
 }
 
 .menu {
+    background: #fff;
+    height: 100%;
+    left: 0;
     position: absolute;
     top: 0;
-    left: 0;
-    background: #fff;
-    width: 240px;
-    height: 100%;
     transform: translate3d(-240px, 0, 0);
     transition: transform 0.35s;
+    width: 240px;
 }
 
     .menu label.menu-toggle {
-        position: absolute;
-        right: -60px;
-        width: 60px;
+        background: #fff url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/25px 25px no-repeat;
+        display: block;
         height: 60px;
         line-height: 0px;
-        display: block;
         padding: 0;
+        position: absolute;
+        right: -60px;
         text-indent: -9999px;
-        background: #fff url(https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png) 50% 50%/25px 25px no-repeat;
+        width: 60px;
     }
 
     .menu ul li > label {
@@ -111,12 +110,12 @@ label.menu-toggle {
     }
 
     .menu ul li a, .menu ul li label {
-        display: block;
-        text-align: center;
-        padding: 0 20px;
-        line-height: 60px;
-        text-decoration: none;
         color: #000;
+        display: block;
+        line-height: 60px;
+        padding: 0 20px;
+        text-align: center;
+        text-decoration: none;
     }
 
         .menu ul li a:hover, .menu ul li label:hover {
@@ -145,33 +144,33 @@ label.menu-toggle {
 #info {
     display: table;
     height: 100%;
-    width: 100%;
     margin-left: auto;
-    vertical-align: middle;
-    text-align: left;
     padding-left: 125px;
     padding-right: 125px;
+    text-align: left;
+    vertical-align: middle;
+    width: 100%;
 }
 
     #info #info-content {
+        color: #000000;
         display: table-cell;
-        vertical-align: middle;
+        font-size: 12px;
         text-align: left;
         text-transform: uppercase;
-        color: #000000;
-        font-size: 12px;
+        vertical-align: middle;
     }
 
         #info #info-content h1 {
-            color: #fff;
-            border: 3px solid #fff;
-            text-align: left;
             background: rgba(0, 0, 0, 0.3);
+            border: 3px solid #fff;
+            color: #fff;
+            display: inline-block;
             font-size: 22px;
             font-weight: normal;
-            padding: 20px;
             margin: 10px;
-            display: inline-block;
+            padding: 20px;
+            text-align: left;
         }
 
             #info #info-content h1 strong {
