Added links to menu to reference the two other controllers

--- a/GnuPlusLinux/Views/Shared/_Layout.cshtml
+++ b/GnuPlusLinux/Views/Shared/_Layout.cshtml
@@ -33,6 +33,15 @@
                 <a asp-area="" asp-controller="Home" asp-action="Registration">Registration</a>
             </li>
             <li>
+                <a asp-area="" asp-controller="Home" asp-action="Application">Application</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Member" asp-action="Register">Register (Member Controller)</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Forums" asp-action="Index">Forums</a>
+            </li>
+            <li>
                 <a asp-area="" asp-controller="Home" asp-action="Login">Login</a>
             </li>
         </ul>
